--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -2,31 +2,27 @@ workflows:
   android-workflow:
     name: Android Workflow
     instance_type: mac_mini_m1
-    max_build_duration: 120
+    max_build_duration: 30
     environment:
-      android_signing:
-        - keystore_reference
-      groups:
-        - google_play # <-- (Includes GCLOUD_SERVICE_ACCOUNT_CREDENTIALS)
-      vars:
-        PACKAGE_NAME: "io.codemagic.flutteryaml" # <-- Put your package name here
-        GOOGLE_PLAY_TRACK: "alpha"
       flutter: stable
+      xcode: latest
+      cocoapods: default
+      vars:
+        FIREBASE_PROJECT: "flutter-ci-cd-a395c"
     scripts:
-      - name: Set up local.properties
-        script: |
-          echo "flutter.sdk=$HOME/programs/flutter" > "$CM_BUILD_DIR/android/local.properties"
       - name: Get Flutter packages
-        script: |
           flutter packages pub get
-      - name: Flutter analyze
+      - name: Build APK with Flutter
         script: |
-          flutter analyze
-      - name: Flutter unit tests
+          flutter build apk --debug
+      - name: Create debug and test APK
         script: |
-          flutter test
-        ignore_failure: true
-      - name: Build AAB with Flutter
+          set -ex
+          cd android
+          ./gradlew app:assembleAndroidTest
+          ./gradlew app:assembleDebug -Ptarget="$CM_BUILD_DIR/integration_test/app_test.dart"
+
+      - name: Run FireBase Test Lab Tests
         script: |
           BUILD_NUMBER=$(($(google-play get-latest-build-number --package-name "$PACKAGE_NAME" --tracks="$GOOGLE_PLAY_TRACK") + 1))      
           flutter build appbundle --release \
