--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,6 +4,8 @@ workflows:
     instance_type: mac_mini_m1
     max_build_duration: 30
     environment:
+      groups:
+        - google_credentials
       flutter: stable
       xcode: latest
       cocoapods: default
@@ -24,10 +26,8 @@ workflows:
 
       - name: Run FireBase Test Lab Tests
         script: |
-          BUILD_NUMBER=$(($(google-play get-latest-build-number --package-name "$PACKAGE_NAME" --tracks="$GOOGLE_PLAY_TRACK") + 1))      
-          flutter build appbundle --release \
-            --build-name=1.0.$BUILD_NUMBER \
-            --build-number=$BUILD_NUMBER
+          set -ex
+          
     artifacts:
       - build/**/outputs/**/*.aab
       - build/**/outputs/**/mapping.txt
